Diversas melhorias - Casos de Teste